--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Mumbai, India"
-  employer         : "Red Brick University"
+  employer         : "IIT Bombay"
   uri              : # URL
   email            : "dtamhane@outlook.com" 
 
