--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,17 +11,20 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
-  - title: "Portfolio"
+
+#  - title: "Teaching"
+ #   url: /teaching/    
+    
+  - title: "Projects"
     url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
+
+  - title: "Talks"
+    url: /talks/
+
     
   - title: "CV"
     url: /cv/
@@ -29,5 +32,5 @@ main:
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+ #   url: /markdown/
