--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
  #   url: /teaching/    
     
   - title: "Projects"
-    url: /portfolio/
+    url: /projects/
         
   - title: "Blog Posts"
     url: /year-archive/
