--- a/_config.yml
+++ b/_config.yml
@@ -229,6 +229,11 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  
+  projects:
+    output: true
+    permalink: /projects/:path/
+
 
 
 # These settings control how pages and collections are included in the site
