--- a/_config.yml
+++ b/_config.yml
@@ -223,9 +223,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  #portfolio:
-   # output: true
-    #permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
   #talks:
    # output: true
     #permalink: /:collection/:path/
@@ -291,6 +291,16 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+
+    #_projects
+      - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
 
 
 # Sass/SCSS
