--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,9 @@ main:
   - title: "Projects"
     url: /projects/
 
+    
+ - title: "Portfolio"
+    url: /portfolio/
 
  # - title: "Presentations"
   #  url: /talks/
