--- a/_config.yml
+++ b/_config.yml
@@ -293,14 +293,14 @@ defaults:
       share: true
 
     #_projects
- - scope:
-      path: ""
-      type: projects
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
+# - scope:
+ #     path: ""
+  #    type: projects
+   # values:
+    #  layout: single
+     # author_profile: true
+      #share: true
+      #comment: true
 
 
 # Sass/SCSS
