--- a/_config.yml
+++ b/_config.yml
@@ -229,6 +229,9 @@ collections:
   #talks:
    # output: true
     #permalink: /:collection/:path/
+  patents:
+    output: true
+    permalink: /:collection/:path/
   
   projects:
     output: true
