--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,7 +25,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-    
+  - title: "Patents"
+    url: /patents/  
 
 #  - title: "Teaching"
  #   url: /teaching/    
