--- a/_config.yml
+++ b/_config.yml
@@ -240,6 +240,7 @@ collections:
 
 
 # These settings control how pages and collections are included in the site
+# These settings control how pages and collections are included in the site
 defaults:
   # _posts
   - scope:
@@ -252,6 +253,7 @@ defaults:
       comments: true
       share: true
       related: true
+
   # _pages
   - scope:
       path: ""
@@ -259,6 +261,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+
   # _teaching
   - scope:
       path: ""
@@ -268,6 +271,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
+
   # _publications
   - scope:
       path: ""
@@ -277,6 +281,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
+
   # _portfolio
   - scope:
       path: ""
@@ -285,7 +290,8 @@ defaults:
       layout: single
       author_profile: true
       share: true
-      comment: true
+      comments: true
+
   # _talks
   - scope:
       path: ""
@@ -294,6 +300,27 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+
+  # _patents
+  - scope:
+      path: ""
+      type: patents
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+
 
     #_projects
 # - scope:
